# sinister

./: .gitignore  LICENSE  README.md  sinister.cabal  stack.yaml
src/client/: Client.hs  Core.hs  Main.hs  Simulation.hs
src/client/Assets/: Archive.hs  FileSystem.hs  Manager.hs  ObjMesh.hs  Resource.hs  ResourcePack.hs  Texture.hs
src/client/Assets/ObjMesh/: Converter.hs  Parser.hs
src/client/Client/: Camera.hs  Camera2D.hs  Player.hs  Ship.hs  World.hs
src/client/Client/Boxed/: Model.hs
src/client/Client/Event/: Camera.hs
src/client/Core/: Context.hs  Event.hs  Input.hs  InputGLFW.hs  Resource.hs  State.hs
src/client/Graphics/: Camera.hs  Camera2D.hs  Core.hs  Light.hs  Mesh.hs  Model.hs  Quad.hs
src/client/Graphics/Layered/: DSL.hs  DebugShip.hs  Layer.hs  Model.hs  TerrM1Ship.hs
src/client/Graphics/Render/: Camera.hs  Common.hs  Layered.hs  Light.hs  Mesh.hs  Model.hs  PolyCube.hs  Quad.hs  Tilenazier.hs
src/client/Graphics/Render/Boxed/: Model.hs
src/client/Graphics/Texture/: Atlas.hs  Render.hs  Repa.hs
src/client/Util/: Texture.hs
src/server/: Authentication.hs  Core.hs  Main.hs
src/server/Core/: Context.hs  Event.hs  State.hs
src/server/Server/: Simulation.hs
src/server/Server/Game/: Player.hs  World.hs
src/server/Server/Game/Boxed/: Model.hs
src/server/Server/Game/World/: Event.hs
src/shared/Control/Wire/: Collection.hs
src/shared/Core/: Block.hs  CoreEvent.hs  Indexed.hs  Log.hs  Message.hs  Monad.hs
src/shared/Game/: Player.hs  Ship.hs  World.hs
src/shared/Game/Boxed/: Block.hs  Chunk.hs  Direction.hs  Model.hs
src/shared/Game/Ship/: Mask.hs
src/shared/Math/: Quaternion.hs  Vector.hs
src/shared/Network/Protocol/: Message.hs
src/shared/Util/: Concurrent.hs  Function.hs  Monad.hs  Vec.hs
